<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:background="@color/bg_light"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/rela_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme"
        android:visibility="gone">

        <TextView
            android:id="@+id/center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/btn_farmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/center"
            android:text="@string/farmer" />

        <Button
            android:id="@+id/btn_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/center"
            android:text="@string/businesser" />
    </RelativeLayout>


    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/bg_light" />

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/main2_rg_height"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/bg_press_home"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/home_page" />

        <RadioButton
            android:id="@+id/rb_meassage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/bg_press_search"
            android:button="@null"
            android:gravity="center"
            android:text="@string/classify_page" />

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="@dimen/main_img_add_width"
            android:layout_height="@dimen/main_img_add_height"
            android:padding="@dimen/main_img_add_padding"
            android:src="@mipmap/public1" />

        <RadioButton
            android:id="@+id/rb_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/bg_press_msg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/message_page" />

        <RadioButton
            android:id="@+id/rb_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/bg_press_me"
            android:button="@null"
            android:gravity="center"
            android:text="@string/owner_page" />
    </RadioGroup>


</LinearLayout>

