<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_line"
        android:background="@color/divider_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_control_lr_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_share"
            style="@style/TextViewBody"
            android:layout_marginLeft="@dimen/status_control_tv_marleft"
            android:text="@string/realy"
            android:textColor="@color/txt_gray" />
        <TextView
            android:id="@+id/tv_share_num"
            style="@style/TextViewBody"
            android:text="0"
            android:textColor="@color/txt_gray" />
        <TextView
            android:paddingLeft="@dimen/cf_padlf"
            android:id="@+id/tv_comment"
            style="@style/TextViewBody"
            android:text="@string/comment"
            android:textColor="@color/txt_gray" />
        <TextView
            android:id="@+id/tv_comment_number"
            style="@style/TextViewBody"
            android:text="0"
            android:textColor="@color/txt_gray" />
        <TextView
            style="@style/TextViewBody"
            android:layout_weight="1"
            android:textColor="@color/txt_gray" />
        <TextView
            android:id="@+id/tv_like"
            style="@style/TextViewBody"

            android:text="@string/click_liked"
            android:textColor="@color/txt_gray" />
        <TextView
            android:id="@+id/tv_like_num"
            style="@style/TextViewBody"
            android:layout_marginRight="@dimen/status_control_tv_marleft"
            android:text="0"
            android:textColor="@color/txt_gray" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_line"
        android:background="@color/divider_gray" />

</LinearLayout>