<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_line"
        android:background="@color/divider_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_control_lr_height"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_share_bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_tran2gray_sel"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_share_bottom"
                android:layout_width="@dimen/status_control_img_width"
                android:layout_height="@dimen/status_control_img_height"
                android:src="@mipmap/timeline_icon_retweet" />

            <TextView
                android:id="@+id/tv_share_bottom"
                style="@style/TextViewBody"
                android:layout_marginLeft="@dimen/status_control_tv_marleft"
                android:text="@string/realy"
                android:textColor="@color/txt_gray" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/view_line"
            android:layout_height="match_parent"
            android:background="@color/divider_gray" />

        <LinearLayout
            android:id="@+id/ll_comment_bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_tran2gray_sel"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_comment_bottom"
                android:layout_width="@dimen/status_control_img_width"
                android:layout_height="@dimen/status_control_img_height"
                android:src="@mipmap/timeline_icon_comment" />

            <TextView
                android:id="@+id/tv_comment_bottom"
                style="@style/TextViewBody"
                android:layout_marginLeft="@dimen/status_control_tv_marleft"
                android:text="@string/comment"
                android:textColor="@color/txt_gray" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/view_line"
            android:layout_height="match_parent"
            android:background="@color/divider_gray" />

        <LinearLayout
            android:id="@+id/ll_like_bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_like_bottom"
                android:layout_width="@dimen/status_control_img_width"
                android:layout_height="@dimen/status_control_img_height"
                android:background="@drawable/bg_press_liked" />

            <TextView
                android:id="@+id/tv_like_bottom"
                style="@style/TextViewBody"
                android:layout_marginLeft="@dimen/status_control_tv_marleft"
                android:text="@string/click_liked"
                android:textColor="@color/txt_gray" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_line"
        android:background="@color/divider_gray" />

</LinearLayout>